--- a/AL/Pages/Index.cshtml
+++ b/AL/Pages/Index.cshtml
@@ -8,33 +8,14 @@
     <div class="MainPageItemText1">
         <div class="uk-accordion-content">
             <p>
-                Sed risus ultricies tristique nulla. Ut tortor pretium viverra suspendisse potenti. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Blandit aliquam etiam erat velit scelerisque in dictum. Turpis egestas pretium aenean pharetra magna. Nulla posuere sollicitudin aliquam ultrices sagittis. Sit amet commodo nulla facilisi. Venenatis lectus magna fringilla urna porttitor. Neque vitae tempus quam pellentesque nec nam aliquam. Enim sit amet venenatis urna cursus. Cras sed felis eget velit. Justo eget magna fermentum iaculis eu non diam. Fermentum leo vel orci porta non pulvinar neque laoreet.
+                Рады приветствовать вас! Данный образовательный портал содержит профильную юридическую информацию по направлению "Архивное дело в суде" для студентов юридических ссузов. Здесь вы можете ознакомиться с 8 темами в разных цифровых форматах: текстовые документы, видеоуроки, презентации, а проверить знания можно с помощью тестовых заданий.
             </p>
         </div>
+
+        @*put photos here*@
+
         <div class="uk-panel">
-            <p>Volutpat sed cras ornare arcu. In vitae turpis massa sed elementum tempus egestas sed sed. Pharetra vel turpis nunc eget. Nisl suscipit adipiscing bibendum est ultricies integer. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Sapien faucibus et molestie ac feugiat sed. Pretium fusce id velit ut tortor pretium viverra. Sem fringilla ut morbi tincidunt augue interdum velit euismod in. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Ac turpis egestas integer eget aliquet. Euismod quis viverra nibh cras pulvinar mattis nunc sed. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam eget. Arcu ac tortor dignissim convallis aenean et tortor at risus.</p>
-            <img class="uk-align-left uk-margin-remove-adjacent" src="https://img.freepik.com/premium-psd/open-book-mockup_171918-90.jpg?w=2000" width="225" height="150" alt="Example image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-    </div>
-
-    <br />
-
-    <div class="MainPageChartItem">
-        <div class="MainPageChart">
-            <canvas id="myChart"/>
-        </div>
-    </div>
-
-    <br />
-
-    <div class="MainPageItemText2">
-        <div class="uk-panel">
-            <img class="uk-align-right uk-margin-remove-adjacent" src="https://img.freepik.com/premium-psd/open-book-mockup_171918-90.jpg?w=2000" width="225" height="150" alt="Example image">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Данный материал разрабатывали для вас студенты СКФ ФГБОУВО "РГУП" факультета непрерывного образования 2 курса 202 группы.</p>
         </div>
     </div>
 </div>
