--- a/AL/Pages/Lessons/LessonPage.cshtml
+++ b/AL/Pages/Lessons/LessonPage.cshtml
@@ -32,53 +32,67 @@
 }
 
 <div>
-    <div class="uk-panel">
-        <iframe class="uk-align-left uk-margin-remove-adjacent" width="800rem" height="450rem" src="@lessonlink" title="Lesson @lessonNumber" frameborder="0" allowfullscreen></iframe>
+    <div class="itemsss">
+        <div>
+            <iframe src="@lessonlink" title="Lesson @lessonNumber" frameborder="0"></iframe>
+        </div>
+
+        <br />
 
         @{
             if (lessonNumber.FirstOrDefault() == "1")
             {
-                <iframe class="uk-align-left uk-margin-remove-adjacent" width="800rem" height="450rem" src="//docs.google.com/presentation/d/e/2PACX-1vTsmI5SpN6ZWLyqS15poiQ96aRzXFsBPLyr7AT3j6wixuq6vPleF6GTSiko2mZgmHtwCCjcGl0Fsxqi/embed?start=false&loop=false&delayms=3000" title="Lesson @lessonNumber" frameborder="0" allowfullscreen></iframe>
+                <div>
+                    <iframe src="//docs.google.com/presentation/d/e/2PACX-1vTsmI5SpN6ZWLyqS15poiQ96aRzXFsBPLyr7AT3j6wixuq6vPleF6GTSiko2mZgmHtwCCjcGl0Fsxqi/embed?start=false&loop=false&delayms=3000" title="Lesson @lessonNumber" frameborder="0"></iframe>
+                </div>
 
-                <h3>Термины</h3>
 
-                <ol>
-                    <li>Архив - учреждение или структурное подразделение организации, осуществляющие хранение, комплектование, учет и использование архивных документов.</li>
-                    <li>Архивное дело в Российской Федерации — деятельность государственных органов, органов местного самоуправления, организаций и граждан в сфере организации хранения, комплектования, учета и использования документов Архивного фонда РФ и других архивных документов</li>
-                    <li>
-                        Архивное дело в судах судебной системы Российской Федерации — судебная деятельность обеспечительного характера, осуществляемая работниками аппаратов судов под руководством судей, которая направлена на комплектование, хранение, учёт и использование документов, образующихся.
-                    </li>
-                    <li>Обеспечение сохранности архивных документов — совокупность действий, направленных на предотвращение утраты архивных документов, и на максимально возможное сохранение их в первоначальном виде и первоначальной форме</li>
-                    <li>
-                        Учет архивных документов — определение количества и состава архивных документов в единицах учета и отражение этого количества и состава в учетных документах для контроля их наличия и состояния.
-                    </li>
-                    <li>Использование архивных документов — применение информации архивных документов в культурных, научных, политических, экономических целях и для обеспечения законных прав и интересов граждан.</li>
-                    <li>Единица архивного хранения — совокупность документов или отдельный физически обособленный документ, принятый на учётное архивное хранение в судах судебной системы Российской Федерации</li>
-                    <li>Номенклатура дел суда — систематизированный перечень наименований дел, заводимых в структурных подразделениях судов судебной системы Российской Федерации, с указанием сроков их хранения, по установленной форме</li>
-                </ol>
+                <div>
+                    <h3>Термины</h3>
+
+                    <ol>
+                        <li>Архив - учреждение или структурное подразделение организации, осуществляющие хранение, комплектование, учет и использование архивных документов.</li>
+                        <li>Архивное дело в Российской Федерации — деятельность государственных органов, органов местного самоуправления, организаций и граждан в сфере организации хранения, комплектования, учета и использования документов Архивного фонда РФ и других архивных документов</li>
+                        <li>
+                            Архивное дело в судах судебной системы Российской Федерации — судебная деятельность обеспечительного характера, осуществляемая работниками аппаратов судов под руководством судей, которая направлена на комплектование, хранение, учёт и использование документов, образующихся.
+                        </li>
+                        <li>Обеспечение сохранности архивных документов — совокупность действий, направленных на предотвращение утраты архивных документов, и на максимально возможное сохранение их в первоначальном виде и первоначальной форме</li>
+                        <li>
+                            Учет архивных документов — определение количества и состава архивных документов в единицах учета и отражение этого количества и состава в учетных документах для контроля их наличия и состояния.
+                        </li>
+                        <li>Использование архивных документов — применение информации архивных документов в культурных, научных, политических, экономических целях и для обеспечения законных прав и интересов граждан.</li>
+                        <li>Единица архивного хранения — совокупность документов или отдельный физически обособленный документ, принятый на учётное архивное хранение в судах судебной системы Российской Федерации</li>
+                        <li>Номенклатура дел суда — систематизированный перечень наименований дел, заводимых в структурных подразделениях судов судебной системы Российской Федерации, с указанием сроков их хранения, по установленной форме</li>
+                    </ol>
+                </div>
             }
             if (lessonNumber.FirstOrDefault() == "2")
             {
-                <h3>Термины</h3>
+    <div>
+        <h3>Термины</h3>
 
-                <ol>
-                    <li>Архивное дело — деятельность по организации хранения, учета и использования архивных документов</li>
-                    <li>
-                        Муниципальный правовой акт – это решение, принятое непосредственно населением внутригородского муниципального образования (далее – муниципальное образование), органом местного самоуправления и (или) должностным лицом местного самоуправления по вопросам местного значения или по вопросам осуществления государственных полномочий, переданных органам местного самоуправления федеральными законами и иными нормативно-правовыми актами.
-                    </li>
-                    <li>Муниципальный архив - структурное подразделение органа местного самоуправления или муниципальное учреждение, создаваемое муниципальным образованием, которые осуществляют хранение, комплектование, учет и использование документов Архивного фонда Российской Федерации, а также других архивных документов</li>
-                    <li>Локальный акт – это один из вариантов подзаконного правового акта, который принимают внутри организации для регулирования какой-либо стороны ее деятельности</li>
-                    <li>Ведомственный нормативный правовой акт  - в РФ традиционное понятие теории права, означающее нормативный правовой акт федерального органа исполнительной власти, изданный на основе и во исполнение федеральных законов, указов и распоряжений Президента РФ, постановлений и распоряжений Правительства РФ, а также по инициативе федерального органа исполнительной власти в пределах его компетенции</li>
-                    <li>Государственный архив - федеральное государственное учреждение, создаваемое Российской Федерацией (далее - федеральный государственный архив), или государственное учреждение субъекта Российской Федерации, создаваемое субъектом Российской Федерации (далее - государственный архив субъекта Российской Федерации), которые осуществляют комплектование, учет, хранение и использование документов Архивного фонда Российской Федерации, а также других архивных документов</li>
-                    <li>Ведомственный архив — государственное архивное учреждение или структурное подразделение, хранящее документы на протяжении определенного срока на своем предприятии, в учреждении и организации.</li>
-                    <li>Национальный стандарт Российской Федерации – документ по стандартизации, который разработан техническим комитетом по стандартизации или проектным техническим комитетом по стандартизации, утвержден Росстандартом и в котором для всеобщего применения устанавливаются общие характеристики объекта стандартизации, а также правила и общие принципы в отношении объекта стандартизации</li>
-                </ol>
+        <ol>
+            <li>Архивное дело — деятельность по организации хранения, учета и использования архивных документов</li>
+            <li>
+                Муниципальный правовой акт – это решение, принятое непосредственно населением внутригородского муниципального образования (далее – муниципальное образование), органом местного самоуправления и (или) должностным лицом местного самоуправления по вопросам местного значения или по вопросам осуществления государственных полномочий, переданных органам местного самоуправления федеральными законами и иными нормативно-правовыми актами.
+            </li>
+            <li>Муниципальный архив - структурное подразделение органа местного самоуправления или муниципальное учреждение, создаваемое муниципальным образованием, которые осуществляют хранение, комплектование, учет и использование документов Архивного фонда Российской Федерации, а также других архивных документов</li>
+            <li>Локальный акт – это один из вариантов подзаконного правового акта, который принимают внутри организации для регулирования какой-либо стороны ее деятельности</li>
+            <li>Ведомственный нормативный правовой акт  - в РФ традиционное понятие теории права, означающее нормативный правовой акт федерального органа исполнительной власти, изданный на основе и во исполнение федеральных законов, указов и распоряжений Президента РФ, постановлений и распоряжений Правительства РФ, а также по инициативе федерального органа исполнительной власти в пределах его компетенции</li>
+            <li>Государственный архив - федеральное государственное учреждение, создаваемое Российской Федерацией (далее - федеральный государственный архив), или государственное учреждение субъекта Российской Федерации, создаваемое субъектом Российской Федерации (далее - государственный архив субъекта Российской Федерации), которые осуществляют комплектование, учет, хранение и использование документов Архивного фонда Российской Федерации, а также других архивных документов</li>
+            <li>Ведомственный архив — государственное архивное учреждение или структурное подразделение, хранящее документы на протяжении определенного срока на своем предприятии, в учреждении и организации.</li>
+            <li>Национальный стандарт Российской Федерации – документ по стандартизации, который разработан техническим комитетом по стандартизации или проектным техническим комитетом по стандартизации, утвержден Росстандартом и в котором для всеобщего применения устанавливаются общие характеристики объекта стандартизации, а также правила и общие принципы в отношении объекта стандартизации</li>
+        </ol>
+    </div>
 
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXya2Te2XgKQ51hyYz8KwUm-6XY7XFWCyFb3G5KiaIslJTiQ/viewform?embedded=true" width="450rem" height="450rem" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+
+    <div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXya2Te2XgKQ51hyYz8KwUm-6XY7XFWCyFb3G5KiaIslJTiQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+    </div>
             }
             if (lessonNumber.FirstOrDefault() == "3")
             {
-                <iframe class="uk-align-left uk-margin-remove-adjacent" width="800rem" height="450rem" src="//docs.google.com/presentation/d/e/2PACX-1vRU-Xp_AbcKBG2S395RhxWaCexmaq0nIFt6neeQrk6j8ykWwrH24y7PXGNfFMLp6XepbPtrllAjthw-/embed?start=false&loop=false&delayms=3000" title="Lesson @lessonNumber" frameborder="0" allowfullscreen></iframe>
+                <iframe class="uk-align-left uk-margin-remove-adjacent" src="//docs.google.com/presentation/d/e/2PACX-1vRU-Xp_AbcKBG2S395RhxWaCexmaq0nIFt6neeQrk6j8ykWwrH24y7PXGNfFMLp6XepbPtrllAjthw-/embed?start=false&loop=false&delayms=3000" title="Lesson @lessonNumber" frameborder="0" allowfullscreen></iframe>
 
                 <h3>Термины</h3>
 
@@ -108,7 +122,7 @@
                     <li>Проверка ведения архивного дела — проведение совокупности мероприятий, направленных на удостоверение степени соответствия исследуемых объектов контроля в сфере архивного дела действующим нормативным требованиям и рекомендациям, а также выработке рекомендаций и оказания практической помощи ответственным должностным лицам аппаратов судов</li>
                 </ol>
 
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScU3S2Pp4oKZW2K55EjEM2I_zsx6dPCui-afVN4PHzv7RH9dQ/viewform?embedded=true" width="450rem" height="450rem" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScU3S2Pp4oKZW2K55EjEM2I_zsx6dPCui-afVN4PHzv7RH9dQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
             }
             if (lessonNumber.FirstOrDefault() == "5")
             {
@@ -146,7 +160,7 @@
                     <li>Выделение документов к уничтожению — выявление в процессе экспертизы научной и практической ценности документов с истекшими сроками хранения и отбор их для уничтожения</li>
                 </ol>
 
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeYub7_yziuB1GFfdk3YpukQu63u-6n8VOY-hiyH4GQe_blOQ/viewform?embedded=true" width="450rem" height="450rem" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeYub7_yziuB1GFfdk3YpukQu63u-6n8VOY-hiyH4GQe_blOQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
             }
             if (lessonNumber.FirstOrDefault() == "7")
             {
@@ -181,7 +195,7 @@
                     <li> соответствии со статьей 188 УК РФ, контрабанда – это незаконное перемещение в крупном размере через таможенную границу РФ товаров или иных предметов, совершенное помимо или с сокрытием от таможенного контроля, либо с обманным использованием документов или средств таможенной идентификации, либо сопряженное с недекларированием или недостоверным декларированием</li>
                 </ol>
 
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfsIVyhdlwJlV1AbrNeF36zjLoAITRi0xa5sVM5_vJQraJIHg/viewform?embedded=true" width="450rem" height="450rem" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfsIVyhdlwJlV1AbrNeF36zjLoAITRi0xa5sVM5_vJQraJIHg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
             }
         }
     </div>
