--- a/AL/wwwroot/css/lessonpage.css
+++ b/AL/wwwroot/css/lessonpage.css
@@ -1,7 +1,10 @@
 ﻿iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    position: static;
+    width: 80%;
+    height: 21rem;
+    overflow: auto;
+}
+.itemsss{
+    margin: 0 auto;
+    display: block;
 }
