--- a/AL/Pages/Choose/ChoosePage.cshtml
+++ b/AL/Pages/Choose/ChoosePage.cshtml
@@ -7,7 +7,7 @@
     <div class="CardAL">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
             <div class="uk-card-media-left uk-cover-container">
-                <img src="https://admkrai.krasnodar.ru/upload/iblock/3b8/3b86b8904112948a70f233904c1cdd7b.jpg" alt="" uk-cover>
+                <img src="~/img/imgchoose1.jpeg" alt="" uk-cover>
                 <canvas width="600" height="400"></canvas>
             </div>
             <div>
