--- a/AL/Pages/Index.cshtml
+++ b/AL/Pages/Index.cshtml
@@ -12,10 +12,65 @@
             </p>
         </div>
 
-        @*put photos here*@
-
         <div class="uk-panel">
             <p>Данный материал разрабатывали для вас студенты СКФ ФГБОУВО "РГУП" факультета непрерывного образования 2 курса 202 группы.</p>
+        </div>
+
+        <br />
+
+        <div>
+            <div class="row row-cols-1 row-cols-md-6 g-6">
+                <div class="col">
+                    <a href="" target="_blank">
+                        <img src="~/img/eva.jpeg" width="150px" height="150px" style="border-radius:1000px;">
+                    </a>
+                    <p class="TextUnderCol">Сокольникова Ева</p>
+                </div>
+
+                <div class="col">
+                    <a href="" target="_blank">
+                        <img src="~/img/liza.jpeg" width="150px" height="150px" style="border-radius:1000px;">
+                        </a>
+                        <p class="TextUnderCol">Гребнева Елизавета</p>
+                </div>
+
+                <div class="col">
+                    <a href="" target="_blank">
+                        <img src="~/img/mihail.jpeg" width="150px" height="150px" style="border-radius:1000px;">
+                        </a>
+                    <p class="TextUnderCol">Варосян Михаил</p>
+                </div>
+
+                <div class="col">
+                    <a href="" target="_blank">
+                        <img src="~/img/sergay.jpeg" width="150px" height="150px" style="border-radius:1000px;">
+                        </a>
+                        <p class="TextUnderCol">Соколов Сергей</p>
+                </div>
+
+                <div class="col">
+                    <a href="" target="_blank">
+                        <img src="~/img/zlata.jpeg" width="150px" height="150px" style="border-radius:1000px;">
+                        </a>
+                    <p class="TextUnderCol">Великоцкая Злата</p>
+                </div>
+
+                <div class="col">
+                    <a href="" target="_blank">
+                        <!-- bug from target="_blank -->
+                        <img src="~/img/vlada.jpeg" width="150px" height="150px" style="border-radius:1000px;">
+                    </a>
+                    <p class="TextUnderCol">Белевская Влада</p>
+                </div>
+
+                <div class="col">
+                    <a href="https://vk.com/ushwbfk" target="_blank">
+                        <img src="~/img/telm.jpeg" width="150px" height="150px" style="border-radius:1000px;">
+                        </a>
+                    <p class="TextUnderCol">Пашаева Тельмина</p>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
