--- a/AL/wwwroot/css/mainpage.css
+++ b/AL/wwwroot/css/mainpage.css
@@ -1,7 +1,10 @@
 ﻿.MainPageAL {
     margin: 2%;
 }
-.MainPageItemText1 {
+.MainPageItemText1{
     margin: auto;
     padding: auto;
+}
+.col {
+    text-align: center;
 }
