--- a/AL/Pages/Lessons/LessonPage.cshtml
+++ b/AL/Pages/Lessons/LessonPage.cshtml
@@ -87,7 +87,7 @@
 
 
     <div>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXya2Te2XgKQ51hyYz8KwUm-6XY7XFWCyFb3G5KiaIslJTiQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+        <iframe class="iframeTest" src="https://docs.google.com/forms/d/e/1FAIpQLSdXya2Te2XgKQ51hyYz8KwUm-6XY7XFWCyFb3G5KiaIslJTiQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
     </div>
             }
             if (lessonNumber.FirstOrDefault() == "3")
@@ -122,7 +122,7 @@
                     <li>Проверка ведения архивного дела — проведение совокупности мероприятий, направленных на удостоверение степени соответствия исследуемых объектов контроля в сфере архивного дела действующим нормативным требованиям и рекомендациям, а также выработке рекомендаций и оказания практической помощи ответственным должностным лицам аппаратов судов</li>
                 </ol>
 
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScU3S2Pp4oKZW2K55EjEM2I_zsx6dPCui-afVN4PHzv7RH9dQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <iframe class="iframeTest" src="https://docs.google.com/forms/d/e/1FAIpQLScU3S2Pp4oKZW2K55EjEM2I_zsx6dPCui-afVN4PHzv7RH9dQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
             }
             if (lessonNumber.FirstOrDefault() == "5")
             {
@@ -160,7 +160,7 @@
                     <li>Выделение документов к уничтожению — выявление в процессе экспертизы научной и практической ценности документов с истекшими сроками хранения и отбор их для уничтожения</li>
                 </ol>
 
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeYub7_yziuB1GFfdk3YpukQu63u-6n8VOY-hiyH4GQe_blOQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <iframe class="iframeTest" src="https://docs.google.com/forms/d/e/1FAIpQLSeYub7_yziuB1GFfdk3YpukQu63u-6n8VOY-hiyH4GQe_blOQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
             }
             if (lessonNumber.FirstOrDefault() == "7")
             {
@@ -195,7 +195,7 @@
                     <li> соответствии со статьей 188 УК РФ, контрабанда – это незаконное перемещение в крупном размере через таможенную границу РФ товаров или иных предметов, совершенное помимо или с сокрытием от таможенного контроля, либо с обманным использованием документов или средств таможенной идентификации, либо сопряженное с недекларированием или недостоверным декларированием</li>
                 </ol>
 
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfsIVyhdlwJlV1AbrNeF36zjLoAITRi0xa5sVM5_vJQraJIHg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <iframe class="iframeTest" src="https://docs.google.com/forms/d/e/1FAIpQLSfsIVyhdlwJlV1AbrNeF36zjLoAITRi0xa5sVM5_vJQraJIHg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
             }
         }
     </div>
