--- a/AL/Pages/Shared/Schemas/_Header.cshtml
+++ b/AL/Pages/Shared/Schemas/_Header.cshtml
@@ -11,10 +11,10 @@
                 <ul class="navbar-nav flex-grow-1">
 
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Index">Домашняя</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Choose/ChoosePage">Lessons</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Choose/ChoosePage">Уроки</a>
                     </li>
 
                 </ul>
