--- a/AL/Pages/Shared/Schemas/_Links.cshtml
+++ b/AL/Pages/Shared/Schemas/_Links.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="~/css/bttn.css" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/css/uikit.min.css" />
 <link rel="stylesheet" type="text/css" href="~/css/lessonpage.css" />
-
+<link rel="stylesheet" type="text/css" href="~/css/mainpage.css" />
 
 <!--
     Headless UI is a modern library with a bit of elements
