--- a/AL/Pages/Shared/Schemas/_Scripts.cshtml
+++ b/AL/Pages/Shared/Schemas/_Scripts.cshtml
@@ -1,14 +1,12 @@
 ﻿<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit-icons.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script type="module" src="~/js/chrt.js" asp-append-version="true"></script>
 <script src="~/js/remover.js" asp-append-version="true"></script>
 <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
 <script src="~/js/typer.js" asp-append-version="true"></script>
-
-<!--
-    OverlayScrollbars is javascript scrollbar plugin that hides native scrollbars, provides custom styleable overlay scrollbars and keeps the native functionality and feeling.
-
-    TypeIt is JavaScript Animated Typing Utility
-    -->
+<script>import Bricks from 'lib/bricks/bricks.js'
+    const instance = Bricks({
+        container: '.col'
+    })
+    instance.update()
+    instance.pack()</script> 
